[package]
name = "arka-light"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonrpsee = { version = "0.20.0", features = ["server", "macros"] }
tokio = { version = "1.28", features = ["full"] }
ethers = { version = "2.0", features = ["abigen", "legacy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
dotenv = "0.15"
clap = { version = "4.2", features = ["derive"] }